Media query on Overflow fixed. set to auto on Y

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -10,9 +10,11 @@ body {
   font-family: "Cormorant Garamond", serif;
   font-weight: 400;
   width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   position: relative;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 a {
