--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -170,11 +170,6 @@
 }
 
 @media only screen and (max-width: 836px) {
-  body {
-    width: 100vw;
-    height: 100vh;
-    // overflow: hidden;
-  }
   .main {
     background-color: $color-dark-1;
     &__heading {
@@ -369,7 +364,7 @@
     background-color: $color-dark-1;
     &__heading {
       position: absolute;
-      margin: 0; 
+      margin: 0;
       top: 40%;
       left: 50%;
       transform: translateX(-50%);
