--- a/src/sass/layouts/_main-navigation.scss
+++ b/src/sass/layouts/_main-navigation.scss
@@ -9,15 +9,15 @@
   right: -100%;
   z-index: 101;
   background-color: rgba(0, 0, 0, 0.1);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   transition: all 0.5s ease-in;
   //   transition-delay: .5s;
 }
 .nav-container-active {
   right: 0;
 }
- 
+
 .nav {
   position: absolute;
   top: 0;
